# django_kyrs_6

./: README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
client/: admin.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_user.py
client/templates/client/: base.html  client_detail.html  client_list.html
client/templates/client/includes/: inc_footer.html  inc_menu.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
mailing/management/commands/: create_manager_group.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_delete_client_alter_mailing_clients.py  0003_mailing_user.py  0004_alter_mailing_options.py  0005_message_user.py  0006_mailing_is_active.py
mailing/templates/mailing/: first.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_blocked.py  0003_alter_user_first_name_alter_user_last_name.py
users/templates/users/: login.html  user_form.html  user_profile.html  user_profile_edit.html
